external/cloud2023/kubernetes/apps/2_case1/counter.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: counter
  labels:
    app: counter
spec: 
  containers:
  - name: counter1
    image: python:3.13.9-alpine3.21
    args: ['/bin/sh', '-c','mkdir -p /tmp; echo "<html><body bgcolor=red>test</body></html>" > /tmp/index.html; python3 -m http.server -d /tmp 8888 ']
---
kind: Service
apiVersion: v1
metadata:
  name: counter-service
spec:
  selector:
    app: counter
  ports:
  # Default port used by the image
  - port: 8888
---
